--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -2,4 +2,32 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.header{
+    background-color: #f5b400bd;
+}
+
+.container{
+    display: flex;
+    height: 50px;
+    padding: 15px;
+    margin-left: 5px;
+    justify-content: space-between;
+}
+
+.lista{
+    list-style-type: none;
+}
+
+.brand{
+    text-transform: uppercase;
+}
+
+.search{
+    width: 300px;
+    background-color: transparent;
+    padding: 5px;
 }
