--- a/components/7-form/form.html
+++ b/components/7-form/form.html
@@ -23,6 +23,10 @@
 
             <!--<button type="submit" class="form__button-item"> + </button>-->
 
+            <div class = "form__item"> ITEM </div>
+            <div class="form__item-num"> 0 </div>
+            <div> <input type="text" class="form__item-add"> </div>
+            <div onclick="teste()" class="form__button-itemremove">-</div>
 
             <div class="form__buttons">
 
