--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -6,28 +6,41 @@
 }
 
 
-.header{
-    background-color: #f5b400bd;
-}
-
 .container{
     display: flex;
-    height: 50px;
+    flex-wrap: nowrap;
+    margin: auto;
+    background-color: #f5b400bd;
+    height: 60px;
     padding: 15px;
-    margin-left: 5px;
-    justify-content: space-between;
+}
+
+.item{
+    flex: 1;
 }
 
 .lista{
     list-style-type: none;
+    display: inline-flex;
+    justify-content: flex-end;
+    text-align: right;
+    padding: 5px;
 }
 
 .brand{
     text-transform: uppercase;
+    text-decoration: none;
+    justify-content: flex-end;
+    
 }
 
 .search{
-    width: 300px;
-    background-color: transparent;
+    background-color: #f5b400bd;
     padding: 5px;
+    font-family: 'FontAwesome';
+    content: '\f002';
+    font-size: 1.0rem;
+    border-color: transparent;
+    width: 100%;
 }
+
