--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -6,23 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="navbar.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Navegação</title>
 </head>
 <body>
 
 
-    <nav class="header">
-        <ul class="container">
-            <li class="lista menu"><i class="fas fa-align-justify"></i></li>
-            <li class="brand lista" alt="logotipo">Js Notes</li>
-            <li class="lista"><input class="search" type="search" name="" id="" placeholder="PESQUISAR" alt="campo de pesquisa"></li>
-            <li class="lista back"><i class="fas fa-redo-alt"></i></li>
-            <li class="lista eye"><i class="fas fa-eye"></i></li>
-            <li class="lista mail"><i class="far fa-envelope"></i></li>
-            <li class="lista user"><i class="fas fa-user"></i></li>
-        </ul>
-    </nav>
+    
+    <nav class="container">
 
+        <!-- item 1 - hamburguer e logotipo -->
+        <div class="item">
+        <a href="" ><i class="fas fa-align-justify"></i></a>
+        <a href="" alt="logotipo" class="brand">Js Notes</a>
+        </div>
+
+        <!-- item 2 Campo de pesquisa-->
+        <form action="" class="item">
+            <input  class="search" type="search" name="" id="" placeholder="&#xf002 PESQUISAR" alt="campo de pesquisa">
+        </form>
+
+        <!-- item 3 icones de funcionalidades-->
+        <ul class="lista item">
+            <li class="lista "><i class="fas fa-redo-alt"></i></li>
+            <li class="lista "><i class="fas fa-eye"></i></li>
+            <li class="lista "><i class="far fa-envelope"></i></li>
+            <li class="lista "><i class="fas fa-user"></i></li>
+        </ul>
+    
+    </nav>
+    
 
 </body>
 </html> 
