--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 
@@ -10,7 +11,7 @@
     display: flex;
     flex-wrap: nowrap;
     margin: auto;
-    background-color: #f5b400bd;
+    background-color: #f5b400bd ;
     height: 60px;
     padding: 15px;
 }
@@ -25,6 +26,7 @@
     justify-content: flex-end;
     text-align: right;
     padding: 5px;
+    margin-right: 15px;-
 }
 
 .brand{
