--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -2,4 +2,46 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+
+.container{
+    display: flex;
+    flex-wrap: nowrap;
+    margin: auto;
+    background-color: #f5b400bd ;
+    height: 60px;
+    padding: 15px;
+}
+
+.item{
+    flex: 1;
+}
+
+.lista{
+    list-style-type: none;
+    display: inline-flex;
+    justify-content: flex-end;
+    text-align: right;
+    padding: 5px;
+    margin-right: 15px;-
+}
+
+.brand{
+    text-transform: uppercase;
+    text-decoration: none;
+    justify-content: flex-end;
+    
+}
+
+.search{
+    background-color: #f5b400bd;
+    padding: 5px;
+    font-family: 'FontAwesome';
+    content: '\f002';
+    font-size: 1.0rem;
+    border-color: transparent;
+    width: 100%;
 }
