--- a/components/7-form/form.html
+++ b/components/7-form/form.html
@@ -14,10 +14,10 @@
     <fieldset class="fieldset__notas">
         <legend> Cadastro de Notas </legend>
 
-        <spam> TITULO </spam>
+        <span> TITULO </span>
         <div><input type="text" class="form__notas" id="titulo"> </div>
 
-        <fieldset class = "fieldset__itens">
+        <fieldset class = "fieldset__itens" id="itens">
             <legend> ITENS </legend>
             <div onclick="teste()" class="form__button-item">+</div>
 
