--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -26,7 +26,7 @@
     justify-content: flex-end;
     text-align: right;
     padding: 5px;
-    margin-right: 15px;-
+    margin-right: 15px;
 }
 
 .brand{
